@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2009-2014  Christian Heckendorf <heckendorfc@gmail.com>
+ *  Copyright (C) 2009-2015  Christian Heckendorf <heckendorfc@gmail.com>
  *
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -139,9 +139,11 @@ unsigned int dbInit(){
 			sqlite3_close(conn);
 			return 0;
 		}
+		/*
 		if(autoAddPlugins()!=HARP_RET_OK){
 			fprintf(stderr,"Automatic plugin loading failed.\nPlease add any installed plugins to the database with harp -a\n");
 		}
+		*/
 	}
 	else{
 		/* Upgrade DB */
