@@ -10,6 +10,7 @@ Changes in HARP-0.6.0:
 - Partial 24 bit audio support.
 - Allowing unicode names.
 - Using POSIX regex for filepath-insert pattern matching.
+- Removed decoder shared libraries; they are now built into harp.
 
 Changes in HARP-0.5.3:
 - Changed shuffle function to avoid predictable results.
